--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <div class="social-link">
                                     <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                     <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                                 </div>
                             </div>
@@ -135,7 +135,7 @@
                         <div class="social-link">
                             <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                     <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
                     <div class="social-link">
                         <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                         <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
@@ -258,7 +258,7 @@
                                 <div class="social-link banner">
                                     <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                     <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                                 </div>
                             </div>
@@ -1683,7 +1683,7 @@
                         <div class="social-link footer">
                             <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                             <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                             <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
