--- a/project.html
+++ b/project.html
@@ -56,7 +56,7 @@
                                 <div class="social-link">
                                     <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                     <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                                 </div>
                             </div>
@@ -136,7 +136,7 @@
                         <div class="social-link">
                             <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                     <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                     <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                         </div>
                     </div>
@@ -166,56 +166,20 @@
                 </div>
                 <ul class="tmp-mainmenu">
                     <li>
-                        <a href="#">Home
+                        <a href="index.html">Home
                         </a>
-                        <!-- <ul class="submenu">
-            <li><a href="index.html">Home 01</a></li>
-            <li><a href="index-02.html">Home 02</a></li>
-            <li><a href="index-03.html">Home 03</a></li>
-            <li><a href="index-04.html">Home 04</a></li>
-            <li><a href="index-05.html">Home 05</a></li>
-            <li><a href="index-06.html">Home 06</a></li>
-            <li><a href="index-07.html">Home 07</a></li>
-            <li><a href="index-08.html">Home 08</a></li>
-            <li><a href="index-09.html">Home 09</a></li>
-            <li><a href="index-10.html">Home 10</a></li>
-            <li><a href="index-11.html">Home 11</a></li>
-            <li><a href="index-12.html">Home 12</a></li>
-            <li><a href="index-13.html">Home 13</a></li>
-        </ul> -->
                     </li>
                     <li>
-                        <a href="about.html">About</a>
-                    </li>
-                    <li class="has-dropdown">
-                        <a href="#">Services
-                            <i class="fa-regular fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="service.html">Service</a></li>
-                            <li><a href="service-details.html">Service Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-dropdown">
-                        <a href="#">Blog
-                            <i class="fa-regular fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="blog.html">Blog Classic</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-dropdown">
-                        <a href="#">Project
-                            <i class="fa-regular fa-chevron-down"></i>
-                        </a>
-                        <ul class="submenu">
-                            <li><a href="project.html">Project</a></li>
-                            <li><a href="project-details.html">Project Details</a></li>
-                        </ul>
+                        <a href="index.html">About</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="project.html">Projects</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="index.html">Contact</a>
                     </li>
                 </ul>
 
@@ -223,10 +187,10 @@
                 <div class="social-wrapper mt--40">
                     <span class="subtitle">find with me</span>
                     <div class="social-link">
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
+                        <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                     </div>
                 </div>
                 <!-- social area end -->
@@ -359,7 +323,7 @@
                             <div class="social-link footer">
                                 <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                 <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/hk_d_explorer" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="https://github.com/harshankrishna" target="_blank"><i class="fa-brands fa-github"></i></a>
                             </div>
                         </div>
