--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@
 
                         </div>
                         <div class="about-btn mt--40 tmp-scroll-trigger tmp-fade-in animation-order-6">
-                            <a class="tmp-btn hover-icon-reverse radius-round" href="about.html">
+                            <a class="tmp-btn hover-icon-reverse radius-round" href="https://drive.google.com/file/d/1q2zJOy62Zm8noNPtwev-pDIoxnYipTzT/view?usp=sharing" target="_blank">
                                 <span class="icon-reverse-wrapper">
-                        <span class="btn-text">Read More About Me</span>
+                        <span class="btn-text">Download CV</span>
                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
                                 </span>
