--- a/index.html
+++ b/index.html
@@ -393,19 +393,19 @@
                     <nav>
                         <ul class="nav nav-tabs" id="nav-tab" role="tablist">
                             <li>
-                                <button class="nav-link active" id="nav-all-tab" data-bs-toggle="tab" data-bs-target="#nav-all" type="button" role="tab" aria-controls="nav-all" aria-selected="true">All</button>
+                                <button class="nav-link active" id="nav-all-tab" data-bs-toggle="tab" data-bs-target="#nav-all" type="button" role="tab" aria-controls="nav-all" aria-selected="true">Mobile Design</button>
                             </li>
                             <li>
-                                <button class="nav-link" id="nav-branding-tab" data-bs-toggle="tab" data-bs-target="#nav-branding" type="button" role="tab" aria-controls="nav-branding" aria-selected="false">Branding</button>
+                                <button class="nav-link" id="nav-branding-tab" data-bs-toggle="tab" data-bs-target="#nav-branding" type="button" role="tab" aria-controls="nav-branding" aria-selected="false">Web Design</button>
                             </li>
                             <li>
-                                <button class="nav-link" id="nav-design-tab" data-bs-toggle="tab" data-bs-target="#nav-design" type="button" role="tab" aria-controls="nav-design" aria-selected="false">Design</button>
+                                <button class="nav-link" id="nav-design-tab" data-bs-toggle="tab" data-bs-target="#nav-design" type="button" role="tab" aria-controls="nav-design" aria-selected="false">Case Study</button>
                             </li>
                             <li>
-                                <button class="nav-link" id="nav-content-writing-tab" data-bs-toggle="tab" data-bs-target="#nav-content-writing" type="button" role="tab" aria-controls="nav-content-writing" aria-selected="false">Content writing</button>
+                                <button class="nav-link" id="nav-content-writing-tab" data-bs-toggle="tab" data-bs-target="#nav-content-writing" type="button" role="tab" aria-controls="nav-content-writing" aria-selected="false">Poster Design</button>
                             </li>
                             <li>
-                                <button class="nav-link" id="nav-marketing-tab" data-bs-toggle="tab" data-bs-target="#nav-marketing" type="button" role="tab" aria-controls="nav-marketing" aria-selected="false">Marketing</button>
+                                <button class="nav-link" id="nav-marketing-tab" data-bs-toggle="tab" data-bs-target="#nav-marketing" type="button" role="tab" aria-controls="nav-marketing" aria-selected="false">Logo Design</button>
                             </li>
                         </ul>
                     </nav>
@@ -416,28 +416,31 @@
                                     <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
-                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/217760887/Crypto-Exchange-Mobile-App-Design" target="_blank">
                                                     <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-1.jpg" alt="Thumbnail">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="portfolio-card-content-wrap">
                                             <div class="content-left">
-                                                <h3 class="portfolio-card-title"><a href="project-details.html">SAAS website
-                                                        design</a></h3>
+                                                <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/217760887/Crypto-Exchange-Mobile-App-Design" target="_blank">Crypto Exchange 
+                                                        Mobile</a></h3>
                                                 <div class="tag-items">
                                                     <ul>
                                                         <li>
                                                             <a href="#" class="tag-item">Figma</a>
                                                         </li>
                                                         <li>
-                                                            <a href="#" class="tag-item">Figma</a>
+                                                            <a href="#" class="tag-item">Prototype</a>
+                                                        </li>
+                                                        <li>
+                                                            <a href="#" class="tag-item">Case Study</a>
                                                         </li>
                                                     </ul>
                                                 </div>
                                             </div>
     
-                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/217760887/Crypto-Exchange-Mobile-App-Design" target="_blank">
                                                 <span class="icon-reverse-wrapper">
                                         <span class="btn-text">View design</span>
                                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -558,33 +561,35 @@
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="tab-pane fade" id="nav-branding" role="tabpanel" aria-labelledby="nav-branding-tab" tabindex="0">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
-                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                    <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-1.jpg" alt="Thumbnail">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/221561351/Blockchain-Site" target="_blank">
+                                                    <img class="w-100" src="assets/images/latest-portfolio/web-img-1.jpg" alt="Thumbnail">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="portfolio-card-content-wrap">
                                             <div class="content-left">
-                                                <h3 class="portfolio-card-title"><a href="project-details.html">SAAS website
-                                                        design</a></h3>
+                                                <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/221561351/Blockchain-Site" target="_blank">Blockchain Site
+                                                        Website</a></h3>
                                                 <div class="tag-items">
                                                     <ul>
                                                         <li>
                                                             <a href="#" class="tag-item">Figma</a>
                                                         </li>
                                                         <li>
-                                                            <a href="#" class="tag-item">Figma</a>
+                                                            <a href="#" class="tag-item">Photoshop</a>
                                                         </li>
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/221561351/Blockchain-Site" target="_blank">
                                                 <span class="icon-reverse-wrapper">
                                         <span class="btn-text">View design</span>
                                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -598,30 +603,30 @@
                                     <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
-                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                    <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-3.jpg" alt="Thumbnail">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/224021275/Crypto-Exchange-Website" target="_blank">
+                                                    <img class="w-100" src="assets/images/latest-portfolio/web-img-2.jpg" alt="Thumbnail">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="portfolio-card-content-wrap">
                                             <div class="content-left">
-                                                <h3 class="portfolio-card-title"><a href="project-details.html">Workout App
-                                                        design</a></h3>
+                                                <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/224021275/Crypto-Exchange-Website" target="_blank">Crypto Exchange
+                                                        Website</a></h3>
                                                 <div class="tag-items">
                                                     <ul>
                                                         <li>
-                                                            <a href="#" class="tag-item">Adobe</a>
+                                                            <a href="#" class="tag-item">Figma</a>
                                                         </li>
                                                         <li>
-                                                            <a href="#" class="tag-item">Webflow</a>
+                                                            <a href="#" class="tag-item">Prototype</a>
                                                         </li>
                                                         <li>
-                                                            <a href="#" class="tag-item">Ai</a>
+                                                            <a href="#" class="tag-item">Case Study</a>
                                                         </li>
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/224021275/Crypto-Exchange-Website" target="_blank">
                                                 <span class="icon-reverse-wrapper">
                                         <span class="btn-text">View design</span>
                                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -669,7 +674,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
-                                    <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-4">
+                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-4">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
                                                 <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
@@ -704,6 +709,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="tab-pane fade" id="nav-design" role="tabpanel" aria-labelledby="nav-design-tab" tabindex="0">
                             <div class="row">
                                 <div class="col-lg-6">
@@ -850,6 +856,8 @@
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="tab-pane fade" id="nav-content-writing" role="tabpanel" aria-labelledby="nav-content-writing-tab" tabindex="0">
                             <div class="row">
                                 <div class="col-lg-6">
@@ -996,6 +1004,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="tab-pane fade" id="nav-marketing" role="tabpanel" aria-labelledby="nav-marketing-tab" tabindex="0">
                             <div class="row">
                                 <div class="col-lg-6">
