--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                     <a href="#aboutme">About</a>
                                 </li>
                                 <li>
-                                    <a href="project.html">Projects</a>
+                                    <a href="#project">Projects</a>
                                 </li>
                                 <li>
                                     <a href="#service">Services</a>
@@ -171,7 +171,7 @@
                         <a href="#aboutme">About</a>
                     </li>
                     <li>
-                        <a href="project.html">Project</a>
+                        <a href="#project">Project</a>
                     </li>
                     <li>
                         <a href="#service">Service</a>
@@ -245,7 +245,7 @@
                             </p>
                             <div class="button-area-banner-two tmp-scroll-trigger tmp-fade-in animation-order-4">
 
-                                <a class="tmp-btn hover-icon-reverse radius-round" href="project.html">
+                                <a class="tmp-btn hover-icon-reverse radius-round" href="#project">
                                     <span class="icon-reverse-wrapper">
                                         <span class="btn-text">My projects</span>
                                     <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -377,7 +377,7 @@
     <!-- tmp About Me end -->
 
     <!-- tmp Latest Portfolio Start -->
-        <section class="latest-portfolio-area custom-column-grid tmp-section-gap">
+        <section class="latest-portfolio-area custom-column-grid tmp-section-gap" id="project">
             <div class="container">
                 <div class="section-head mb--60">
                     <div class="section-sub-title center-title tmp-scroll-trigger tmp-fade-in animation-order-1">
@@ -492,14 +492,14 @@
                                     <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-3">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
-                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                    <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-4.jpg" alt="Thumbnail">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/224044187/Tourist-App" target="_blank">
+                                                    <img class="w-100" src="assets/images/latest-portfolio/mob-img-3.jpg" alt="Thumbnail">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="portfolio-card-content-wrap">
                                             <div class="content-left">
-                                                <h3 class="portfolio-card-title"><a href="project-details.html">Tourist App
+                                                <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/224044187/Tourist-App" target="_blank">Tourist App
                                                         design</a></h3>
                                                 <div class="tag-items">
                                                     <ul>
@@ -515,7 +515,7 @@
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/224044187/Tourist-App" target="_blank">
                                                 <span class="icon-reverse-wrapper">
                                         <span class="btn-text">View design</span>
                                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -1173,33 +1173,34 @@
                             </div>
                         </div>
 
+                        <!-- logo design -->
                         <div class="tab-pane fade" id="nav-marketing" role="tabpanel" aria-labelledby="nav-marketing-tab" tabindex="0">
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
-                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                    <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-1.jpg" alt="Thumbnail">
+                                                <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/gallery/216984699/Logo-Folio-My-Client-Logos" target="_blank">
+                                                    <img class="w-100" src="assets/images/latest-portfolio/logo-img-1.jpg" alt="Thumbnail">
                                                 </a>
                                             </div>
                                         </div>
                                         <div class="portfolio-card-content-wrap">
                                             <div class="content-left">
-                                                <h3 class="portfolio-card-title"><a href="project-details.html">SAAS website
+                                                <h3 class="portfolio-card-title"><a href="https://www.behance.net/gallery/216984699/Logo-Folio-My-Client-Logos" target="_blank">Logo Folio
                                                         design</a></h3>
                                                 <div class="tag-items">
                                                     <ul>
                                                         <li>
-                                                            <a href="#" class="tag-item">Figma</a>
+                                                            <a href="#" class="tag-item">illustrator</a>
                                                         </li>
                                                         <li>
-                                                            <a href="#" class="tag-item">Figma</a>
+                                                            <a href="#" class="tag-item">Photoshop</a>
                                                         </li>
                                                     </ul>
                                                 </div>
                                             </div>
-                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                            <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/gallery/216984699/Logo-Folio-My-Client-Logos" target="_blank">
                                                 <span class="icon-reverse-wrapper">
                                         <span class="btn-text">View design</span>
                                                 <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -1209,7 +1210,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6">
+                                <!-- <div class="col-lg-6">
                                     <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
                                         <div class="portfoli-card-img">
                                             <div class="img-box v2">
@@ -1317,7 +1318,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -1830,15 +1831,6 @@
                     </div>
                 </div>
             </div>
-            <div class="see-all-btn-wrap text-center mt--60">
-                <a class="tmp-btn hover-icon-reverse radius-round" href="#">
-                    <span class="icon-reverse-wrapper">
-                        <span class="btn-text">View All Projects</span>
-                    <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                    <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                    </span>
-                </a>
-            </div>
         </div>
     </section>
     <!-- Tpm Latest Portfolio End -->
@@ -1873,7 +1865,7 @@
                                 <a href="#aboutme">About Me</a>
                             </li>
                             <li>
-                                <a href="project.html">Projects</a>
+                                <a href="#project">Projects</a>
                             </li>
                             <li>
                                 <a href="#service">Services</a>
