--- a/project.html
+++ b/project.html
@@ -298,14 +298,14 @@
                                 <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-3.jpg" alt="Thumbnail">
+                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/harshankrishdev" target="_blank">
+                                                <img class="w-100" src="assets/images/latest-portfolio/mob-img-2.jpg" alt="Thumbnail">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="portfolio-card-content-wrap">
                                         <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Women Safety
+                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/harshankrishdev" target="_blank">Women Safety
                                                     SOS</a></h3>
                                             <div class="tag-items">
                                                 <ul>
@@ -321,7 +321,7 @@
                                                 </ul>
                                             </div>
                                         </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/harshankrishdev" target="_blank">
                                             <span class="icon-reverse-wrapper">
                                     <span class="btn-text">View design</span>
                                             <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -733,27 +733,27 @@
                                 <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-1">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
+                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/harshankrishdev" target="_blank">
                                                 <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-1.jpg" alt="Thumbnail">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="portfolio-card-content-wrap">
                                         <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">SAAS website
-                                                    design</a></h3>
+                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/harshankrishdev" target="_blank">Crypto Exchange
+                                                CaseStudy</a></h3>
                                             <div class="tag-items">
                                                 <ul>
                                                     <li>
                                                         <a href="#" class="tag-item">Figma</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="tag-item">Figma</a>
+                                                        <a href="#" class="tag-item">CaseStudy</a>
                                                     </li>
                                                 </ul>
                                             </div>
                                         </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/harshankrishdev" target="_blank">
                                             <span class="icon-reverse-wrapper">
                                     <span class="btn-text">View design</span>
                                             <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
@@ -767,101 +767,27 @@
                                 <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
                                     <div class="portfoli-card-img">
                                         <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-3.jpg" alt="Thumbnail">
+                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="https://www.behance.net/harshankrishdev" target="_blank">
+                                                <img class="w-100" src="assets/images/latest-portfolio/mob-img-2.jpg" alt="Thumbnail">
                                             </a>
                                         </div>
                                     </div>
                                     <div class="portfolio-card-content-wrap">
                                         <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Workout App
-                                                    design</a></h3>
-                                            <div class="tag-items">
-                                                <ul>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Adobe</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Webflow</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Ai</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
-                                            <span class="icon-reverse-wrapper">
-                                    <span class="btn-text">View design</span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-3">
-                                    <div class="portfoli-card-img">
-                                        <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-4.jpg" alt="Thumbnail">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="portfolio-card-content-wrap">
-                                        <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Workout App
-                                                    design</a></h3>
+                                            <h3 class="portfolio-card-title"><a href="https://www.behance.net/harshankrishdev" target="_blank">Women Safety SOS
+                                                Casestudy</a></h3>
                                             <div class="tag-items">
                                                 <ul>
                                                     <li>
                                                         <a href="#" class="tag-item">Figma</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" class="tag-item">Framer</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Wordpress</a>
+                                                        <a href="#" class="tag-item">Casestudy</a>
                                                     </li>
                                                 </ul>
                                             </div>
                                         </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
-                                            <span class="icon-reverse-wrapper">
-                                    <span class="btn-text">View design</span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-4">
-                                    <div class="portfoli-card-img">
-                                        <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-2.jpg" alt="Thumbnail">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="portfolio-card-content-wrap">
-                                        <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Dashboard
-                                                    design</a></h3>
-                                            <div class="tag-items">
-                                                <ul>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Adobe</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Webflow</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
+                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="https://www.behance.net/harshankrishdev" target="_blank">
                                             <span class="icon-reverse-wrapper">
                                     <span class="btn-text">View design</span>
                                             <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
