--- a/project.html
+++ b/project.html
@@ -796,7 +796,7 @@
                                         </a>
                                     </div>
                                 </div>
-                            </div>w
+                            </div>
                         </div>
                     </div>
 
