--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                         <div class="logo-img">
                                             <img src="assets/images/about/logo-1.svg" alt="logo">
                                         </div>
-                                        <h3 class="card-title">Business Solutions</h3>
+                                        <h3 class="card-title">UI/UX Design</h3>
                                     </div>
                                     <p class="card-para">Each one showcases my approach and dedication to detail, creativity
                                     </p>
@@ -351,7 +351,7 @@
                                         <div class="logo-img">
                                             <img src="assets/images/about/logo-2.svg" alt="logo">
                                         </div>
-                                        <h3 class="card-title">Profit Partners</h3>
+                                        <h3 class="card-title">Graphic Design</h3>
                                     </div>
                                     <p class="card-para">Business consulting consul us to a provide expert advice
                                         businesses
@@ -1419,7 +1419,7 @@
     </section>
     <!-- Tpm My Skill Area End -->
 
-    
+
  <!-- Start Footer Area  -->
  <footer class="footer-area footer-style-one-wrapper  tmp-section-gap" id="contact">
     <div class="container">
