--- a/project.html
+++ b/project.html
@@ -226,11 +226,8 @@
                 <div class="section-sub-title center-title tmp-scroll-trigger tmp-fade-in animation-order-1">
                     <span class="subtitle">All Projects</span>
                 </div>
-                <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2"> Transforming Ideas into
-                    Exceptional </h2>
-                <p class="description section-sm tmp-scroll-trigger tmp-fade-in animation-order-3">Business consulting
-                    consultants provide expert advice and guida
-                    businesses to help them improve their performance, efficiency, and organizational</p>
+                <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2"> Turning ideas into thoughtful, user-first visuals </h2>
+                <p class="description section-sm tmp-scroll-trigger tmp-fade-in animation-order-3">Designing seamless web and mobile experiences with detail, usability, and story. Explore how I turn ideas into engaging digital experiences.</p>
             </div>
             <div class="latest-portfolio-tabs-area">
                 <nav>
@@ -905,40 +902,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-4">
-                                    <div class="portfoli-card-img">
-                                        <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-2.jpg" alt="Thumbnail">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="portfolio-card-content-wrap">
-                                        <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Dashboard
-                                                    design</a></h3>
-                                            <div class="tag-items">
-                                                <ul>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Adobe</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Webflow</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
-                                            <span class="icon-reverse-wrapper">
-                                    <span class="btn-text">View design</span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div> -->
+                           
                         </div>
                     </div>
 
@@ -979,115 +943,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-2">
-                                    <div class="portfoli-card-img">
-                                        <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-3.jpg" alt="Thumbnail">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="portfolio-card-content-wrap">
-                                        <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Workout App
-                                                    design</a></h3>
-                                            <div class="tag-items">
-                                                <ul>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Adobe</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Webflow</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Ai</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
-                                            <span class="icon-reverse-wrapper">
-                                    <span class="btn-text">View design</span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-3">
-                                    <div class="portfoli-card-img">
-                                        <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-4.jpg" alt="Thumbnail">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="portfolio-card-content-wrap">
-                                        <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Workout App
-                                                    design</a></h3>
-                                            <div class="tag-items">
-                                                <ul>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Figma</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Framer</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Wordpress</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
-                                            <span class="icon-reverse-wrapper">
-                                    <span class="btn-text">View design</span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="latest-portfolio-card-style-two image-box-hover tmp-scroll-trigger tmp-fade-in animation-order-4">
-                                    <div class="portfoli-card-img">
-                                        <div class="img-box v2">
-                                            <a class="tmp-scroll-trigger tmp-zoom-in animation-order-1" href="project-details.html">
-                                                <img class="w-100" src="assets/images/latest-portfolio/portfoli-img-2.jpg" alt="Thumbnail">
-                                            </a>
-                                        </div>
-                                    </div>
-                                    <div class="portfolio-card-content-wrap">
-                                        <div class="content-left">
-                                            <h3 class="portfolio-card-title"><a href="project-details.html">Dashboard
-                                                    design</a></h3>
-                                            <div class="tag-items">
-                                                <ul>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Adobe</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="tag-item">Webflow</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                        <a class="tmp-btn hover-icon-reverse radius-round btn-border btn-md" href="portfolio-details.html">
-                                            <span class="icon-reverse-wrapper">
-                                    <span class="btn-text">View design</span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="fa-sharp fa-regular fa-arrow-right"></i></span>
-                                            </span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div> -->
+                            
                         </div>
                     </div>
                 </div>
@@ -1107,7 +963,7 @@
                                     <img src="assets/images/logo/white-logo-reeni.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
                                 </a>
                             </div>
-                            <p class="description"><span>Get Ready</span> To <br> Create Great</p>
+                            <p class="description">Good Design is about the process, not the product</p>
                             <div class="social-link footer">
                                 <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                 <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
