--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <img src="assets/images/logo/man.png" alt="personal-logo">
                         </a>
                     </div>
-                    <h5 class="title mt--30">Freelancer delivering exceptional Webflow, and Next.js solutions.</h5>
-                    <p class="disc">I am a skilled freelancer specializing in Webflow development, Figma design, and Next.js projects. I deliver creative, dynamic, and user-centric web solutions.
+                    <h5 class="title mt--30">Freelance Availability</h5>
+                    <p class="disc">I’m available for freelance UI/UX design projects — let’s collaborate and create meaningful digital experiences. Feel free to reach out!
                     </p>
                     <div class="short-contact-area">
                         <!-- single contact information -->
@@ -238,10 +238,8 @@
                                 </span>
                                 </span>
                             </h1>
-                            <p class="disc tmp-scroll-trigger tmp-title-split tmp-fade-in animation-order-3"> A personal
-                                <span>portfolio</span> is a collection of your work, that is
-                                achievements, and skills that highlights in your abilities and professional <span>web
-                                    design</span> growth. It serves as
+                            <p class="disc tmp-scroll-trigger tmp-title-split tmp-fade-in animation-order-3"> I am a passionate & Creative
+                                <span>UI/UX designer</span> with a strong commitment to delivering exceptional user experiences.Strategy to design impactful, user-centric interfaces for <span>Web & Mobile </span>platforms.
                             </p>
                             <div class="button-area-banner-two tmp-scroll-trigger tmp-fade-in animation-order-4">
 
@@ -324,11 +322,9 @@
                             <div class="section-sub-title tmp-scroll-trigger tmp-fade-in animation-order-1">
                                 <span class="subtitle">About Me</span>
                             </div>
-                            <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Boost
-                                Business Strategic <br> Solutions with Us</h2>
-                            <p class="description tmp-scroll-trigger tmp-fade-in animation-order-3">Business consulting
-                                consultants provide expert advice and guida
-                                businesses to help them improve their performance, efficiency, and organizational</p>
+                            <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Designing with Purpose, 
+                             <br> Driven by Passion</h2>
+                            <p class="description tmp-scroll-trigger tmp-fade-in animation-order-3">Hi, I’m Harshankrishna, a UI/UX & Visual Designer from Madurai with a keen eye for detail and a flair for storytelling through design. From vibrant brand identities to intuitive digital experiences, I’ve transformed ideas into interactive journeys that resonate with users. With 3+ years of experience, I specialize in creating pixel-perfect designs, responsive interfaces, and engaging visuals that elevate user journeys.</p>
                         </div>
                         <div class="about-us-section-card row g-5">
 
@@ -340,7 +336,8 @@
                                         </div>
                                         <h3 class="card-title">UI/UX Design</h3>
                                     </div>
-                                    <p class="card-para">Each one showcases my approach and dedication to detail, creativity
+                                    <p class="card-para">Wireframing, Prototyping, Interaction Design, Testing
+
                                     </p>
                                 </div>
                             </div>
@@ -353,8 +350,7 @@
                                         </div>
                                         <h3 class="card-title">Graphic Design</h3>
                                     </div>
-                                    <p class="card-para">Business consulting consul us to a provide expert advice
-                                        businesses
+                                    <p class="card-para">Branding Posters, Banner, Social Media Creatives
                                     </p>
                                 </div>
                             </div>
@@ -381,13 +377,11 @@
             <div class="container">
                 <div class="section-head mb--60">
                     <div class="section-sub-title center-title tmp-scroll-trigger tmp-fade-in animation-order-1">
-                        <span class="subtitle">Latest Projects</span>
+                        <span class="subtitle">Look at My Latest Projects</span>
                     </div>
-                    <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2"> Transforming Ideas into
-                        Exceptional </h2>
-                    <p class="description section-sm tmp-scroll-trigger tmp-fade-in animation-order-3">Business consulting
-                        consultants provide expert advice and guida
-                        businesses to help them improve their performance, efficiency, and organizational</p>
+                    <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2"> Turning ideas into thoughtful, user-first visuals
+                    </h2>
+                    <p class="description section-sm tmp-scroll-trigger tmp-fade-in animation-order-3">Designing seamless web and mobile experiences with detail, usability, and story. Explore how I turn ideas into engaging digital experiences.</p>
                 </div>
                 <div class="latest-portfolio-tabs-area">
                     <nav>
@@ -1095,15 +1089,10 @@
             <div class="header-top-inner">
                 <div class="section-head text-align-left">
                     <div class="section-sub-title tmp-scroll-trigger tmp-fade-in animation-order-1">
-                        <span class="subtitle">My Services</span>
+                        <span class="subtitle">Explore my services
+                        </span>
                     </div>
-                    <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Elevated Designs
-                        Personalized <br> the best Experiences</h2>
-                </div>
-                <div class="discription-area tmp-scroll-trigger tmp-fade-in animation-order-3">
-                    <p class="description color-primary-3rd"> Business consulting consultants provide expert advice and
-                        guida businesses to help them improve their performance, efficiency, and organizational
-                    </p>
+                    <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Shaping digital experiences with <br>clarity, craft, and purpose.</h2>
                 </div>
             </div>
             <div class="services-widget v2">
@@ -1115,8 +1104,8 @@
                             </div>
                             <h3 class="title">Ui/Ux Design</h3>
                         </div>
-                        <p class="para">A personal portfolio is a curated collection of an individual's professional
-                            work, showcasing their skills</p>
+                        <p class="para">Designing clean, intuitive interfaces for web and mobile apps. I turn ideas into seamless user experiences.
+                        </p>
                     </div>
                     <button class="service-link modal-popup"></button>
                 </div>
@@ -1128,7 +1117,8 @@
                             </div>
                             <h3 class="title">Branding Design</h3>
                         </div>
-                        <p class="para">I specialize in creating solutions that are not only visually engaging but also align with business goals</p>
+                        <p class="para">Creating consistent and impactful brand visuals. I help your brand speak with style and clarity.
+                        </p>
                     </div>
                     <button class="service-link modal-popup"></button>
                 </div>
@@ -1140,7 +1130,7 @@
                             </div>
                             <h3 class="title">Logo Design</h3>
                         </div>
-                        <p class="para">Each one showcases my approach and dedication to detail, creativity, and results-driven outcomes.</p>
+                        <p class="para">Designing unique, memorable logos that reflect your brand’s identity. Simple, bold, and timeless.</p>
                     </div>
                     <button class="service-link modal-popup"></button>
                 </div>
@@ -1357,12 +1347,9 @@
                                 <div class="section-sub-title tmp-scroll-trigger tmp-fade-in animation-order-1">
                                     <span class="subtitle">My Skill</span>
                                 </div>
-                                <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">My Experts
-                                    Areas Where I <br> Gained Skill</h2>
-                                <p class="description tmp-scroll-trigger tmp-fade-in animation-order-3">Business consulting
-                                    consultants provide expert advice and guida busi
-                                    nesses to help them improve their performance, efficiency, and organ izational Business
-                                    consulting consultants provide</p>
+                                <h2 class="title split-collab tmp-scroll-trigger tmp-fade-in animation-order-2">Design with purpose
+                                    <br>Create with impact</h2>
+                                <p class="description tmp-scroll-trigger tmp-fade-in animation-order-3">I craft meaningful digital experiences through thoughtful design and user-centered thinking.</p>
                             </div>
                         </div>
                     </div>
@@ -1374,8 +1361,8 @@
                                         <img src="assets/images/icons/icon-03.png" alt="my-skill-icon">
                                     </div>
                                     <h3 class="card-title">Figma</h3>
-                                    <p class="card-para">The personal portfol category includes websites or physic Your
-                                        Journey Your Story</p>
+                                    <p class="card-para">A collaborative tool for creating wireframes, prototypes, and UI/UX designs.
+                                    </p>
                                 </div>
                             </div>
 
@@ -1385,8 +1372,7 @@
                                         <img src="assets/images/icons/icon-02.png" alt="my-skill-icon">
                                     </div>
                                     <h3 class="card-title">Photoshop</h3>
-                                    <p class="card-para">The personal portfol category includes websites or physic Your
-                                        Journey Your Story</p>
+                                    <p class="card-para">Powerful image editing software for photo manipulation and graphic design</p>
                                 </div>
                             </div>
 
@@ -1396,8 +1382,8 @@
                                         <img src="assets/images/icons/icon-05.png" alt="my-skill-icon">
                                     </div>
                                     <h3 class="card-title">illustrator</h3>
-                                    <p class="card-para">The personal portfol category includes websites or physic Your
-                                        Journey Your Story</p>
+                                    <p class="card-para">Vector graphics software for creating scalable logos, posters, icons, and illustrations.
+                                    </p>
                                 </div>
                             </div>
 
@@ -1407,8 +1393,8 @@
                                         <img src="assets/images/icons/icon-04.png" alt="my-skill-icon">
                                     </div>
                                     <h3 class="card-title">Premiere Pro</h3>
-                                    <p class="card-para">The personal portfol category includes websites or physic Your
-                                        Journey Your Story</p>
+                                    <p class="card-para">Professional video editing software for crafting high-quality videos with precise control.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -1432,7 +1418,7 @@
                                 <img src="assets/images/logo/white-logo-reeni.png" alt="Reeni - Personal Portfolio HTML Template for developers and freelancers">
                             </a>
                         </div>
-                        <p class="description"><span>Get Ready</span> To <br> Create Great</p>
+                        <p class="description">Good Design is about the process, not the product</p>
                         <div class="social-link footer">
                             <a href="https://www.behance.net/harshankrishdev" target="_blank"><i class="fa-brands fa-behance"></i></a>
                             <a href="https://www.linkedin.com/in/harshankrishna-k-v" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
