--- a/index.html
+++ b/index.html
@@ -171,13 +171,10 @@
                         <a href="#aboutme">About</a>
                     </li>
                     <li>
-                        <a href="project.html">Project</a>
+                        <a href="project.html">Projects</a>
                     </li>
                     <li>
-                        <a href="#service">Service</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="#service">Services</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
